<resources>
    <string name="app_name">CustomView</string>
    <string name="savings_accounts">Savings Accounts</string>
    <string name="select_savings_account_to_transfer">Select savings account to transfer</string>
    <string name="past_transactions">Past Transactions</string>
    <string name="pay_when_received">\"Pay\" when received\n\"Pay again\" when paid</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="select_date_time"><![CDATA[Select date & time]]></string>
    <string name="enter_amount">Enter Amount</string>
    <string name="search_name_number_or_upi">Search name, number or UPI</string>
    <string name="add_a_note">Add a note</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="enter_transaction_password">Enter Transaction Password</string>
    <string name="confirm">Confirm</string>
    <string name="transaction_password_disclaimer">
        *After confirming the transaction password, the transaction can not be canceled or reversed
    </string>
    <string name="payment_successful">Payment Successful</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pay">Pay</string>
    <string name="view_receipt">View Receipt</string>
</resources>