<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.nishant.customview.ui.TransactionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/transactionsFragmentParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transferRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:transferIcons="@{viewModel.transferIcons}" />

        <TextView
            android:id="@+id/tvPastTransactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="56dp"
            android:text="@string/past_transactions"
            android:textColor="#243257"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transferRecyclerView" />

        <ImageView
            android:id="@+id/iconPast"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_past"
            app:layout_constraintBottom_toBottomOf="@id/tvPastTransactions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvPastTransactions"
            app:layout_goneMarginEnd="2dp" />

        <com.nishant.customview.views.MyEditText
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_search"
            android:hint="@string/search_name_number_or_upi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iconPast" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transactionsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchBar"
            app:transactions="@{viewModel.transactions}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>