...
            android:text="@string/select_savings_account_to_transfer"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tvPaymentMethod"
            app:layout_constraintTop_toBottomOf="@id/tvPaymentMethod" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/banksRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            bankItems="@{viewModel.banks}"
            app:layout_constraintTop_toBottomOf="@id/tvSelectSavings" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/accountsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#F8F8F8"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
...
