...
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_bar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/paymentMethodRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintEnd_toEndOf="parent"
...
